data overflow fixed

--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body {
         position: relative;
         margin-top: 50px;
         border: 2px solid black;
+        overflow: hidden;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
 /* env visualization */
